change of path. fixed

--- a/about.html
+++ b/about.html
@@ -57,10 +57,10 @@
             About <span class="text-secondary">Me</span>
         </h1>
         <h2 class="words-heading about-words-heading">
-            In case I dont see ya, good afternoon, good evening, and good night.
+            In case I dont see you, good afternoon, good evening, and good night.
         </h2>
         <div class="about-info">
-            <img src="../dist/img/wordcloud.jpeg" alt="wordcloud" class="bio-image">
+            <img src="../img/wordcloud.jpeg" alt="wordcloud" class="bio-image">
             <div class="bio">
                 <h3 class="text-secondary">BIO</h3>
                 <p class="bio-text">I have two degrees, Business and CS, but I am prepared and determined to be a
