text content fix

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                     mind learn a new one. </p>
                 <p class="bio-text">I am a teamplayer, but I am not afraid of taking responsibilites and work
                     individually. </p>
-                <p class="bio-text">I can prove my ability if I have the chance, no but for this line. </p>
+                <p class="bio-text">I can prove my ability if I have the chance, and there is no but for this line :)</p>
 
             </div>
 
