image path, fixed locally. see how it looks when published

--- a/work.html
+++ b/work.html
@@ -65,8 +65,8 @@
                     <i class="fas fa-star"></i>&nbsp;2048 Angular Web App
                 </a>
                 <div class="container">
-                    <!--<a href="#!"><img src="../img/proj1.jpg" alt="Project" class="image"></a>-->
-                    <img src="../img/proj1.jpg" alt="Project" class="image">
+                    <!--<a href="#!"><img src="img/proj1.jpg" alt="Project" class="image"></a>-->
+                    <img src="img/proj1.jpg" alt="Project" class="image">
                     <div class="overlay">
                         <div class="wrappedtext">This is a personal web application project. <br>Built with self-learnt
                             <span style="color:#dcae1d;">Angular/TypeScript</span>,
@@ -89,7 +89,7 @@
                 </a>
 
                 <div class="container">
-                    <img src="../img/proj2.jpg" alt="Project" class="image">
+                    <img src="img/proj2.jpg" alt="Project" class="image">
                     <div class="overlay">
                         <div class="wrappedtext">This is a academic(CMPT470) group web application project. <br>Built
                             with
@@ -110,7 +110,7 @@
                     <i class="fas fa-star"></i>&nbsp;Animation FK&IK
                 </a>
                 <div class="container">
-                    <img src="../img/bg4.jpg" alt="Project" class="image">
+                    <img src="img/bg4.jpg" alt="Project" class="image">
                     <div class="overlay">
                         <div class="wrappedtext">Animation of <span style="color:#dcae1d;">Forward&Inverse Kinematics</span>,
                             programmed in
@@ -131,7 +131,7 @@
                     <i class="fas fa-star"></i>&nbsp;Ruby On Rails Web APP
                 </a>
                 <div class="container">
-                    <img src="../img/proj3.jpg" alt="Project" class="image">
+                    <img src="img/proj3.jpg" alt="Project" class="image">
                     <div class="overlay">
                         <div class="wrappedtext">This is an academic(CMPT276) group web application project. <br>Built
                             with
@@ -153,7 +153,7 @@
                 </a>
 
                 <div class="container">
-                    <img src="../dist/img/bg5.jpg" alt="Project" class="image">
+                    <img src="img/bg5.jpg" alt="Project" class="image">
                     <div class="overlay">
                         <div class="wrappedtext">This is an academic(CMPT365) project which reads input images or
                             videos and returns audio results. <br>Programmed in
