--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             In case I dont see you, good afternoon, good evening, and good night.
         </h2>
         <div class="about-info">
-            <img src="../img/wordcloud.jpeg" alt="wordcloud" class="bio-image">
+            <img src="img/wordcloud.jpeg" alt="wordcloud" class="bio-image">
             <div class="bio">
                 <h3 class="text-secondary">BIO</h3>
                 <p class="bio-text">I have two degrees, Business and CS, but I am prepared and determined to be a
