--- a/work.html
+++ b/work.html
@@ -131,7 +131,7 @@
                     <i class="fas fa-star"></i>&nbsp;Ruby On Rails Web APP
                 </a>
                 <div class="container">
-                    <img src="img/proj3.jpg" alt="Project" class="image">
+                    <img src="img/proj3.JPG" alt="Project" class="image">
                     <div class="overlay">
                         <div class="wrappedtext">This is an academic(CMPT276) group web application project. <br>Built
                             with
