some text change

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <!--<iframe src="snake.html" height="620" width="620"></iframe>-->
         </div>
 
-        <div class="boxes column">
+        <div class="boxes ">
 
             <div>
                 <span class="text-secondary">
