--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-    <title>About Me</title>
+    <title>My Projects</title>
 </head>
 
 <body class="work-body">
@@ -57,7 +57,7 @@
             My <span class="text-secondary">Work</span>
         </h1>
         <h2 class="words-heading about-words-heading">
-            my completed projects so for, including personal projects and academic projects.
+            Some of my completed projects, including personal projects and academic projects.
         </h2>
         <div class="projects">
             <div class="item">
