--- a/work.html
+++ b/work.html
@@ -136,7 +136,7 @@
                         <div class="wrappedtext">This is an academic(CMPT276) group web application project. <br>Built
                             with
                             <span style="color:#dcae1d;">Ruby on Rails</span> using <span style="color:#dcae1d;">MVC</span>
-                            pattern, worked with <span style="color:#dcae1d;">psql</span> database and
+                            pattern, worked with <span style="color:#dcae1d;">pgsql</span> database and
                             deployed to Heroku.
                         </div>
                     </div>
