added flappyRocket project description to my work page

--- a/work.html
+++ b/work.html
@@ -60,6 +60,31 @@
             Some of my completed projects, including personal projects and academic projects.
         </h2>
         <div class="projects">
+
+            <div class="item">
+                <a href="#" class="btn">
+                    <i class="fas fa-star"></i>&nbsp;2048 Angular Web App
+                </a>
+                <div class="container">
+                    <!--<a href="#!"><img src="img/proj1.jpg" alt="Project" class="image"></a>-->
+                    <img src="img/proj0.PNG" alt="Project" class="image">
+                    <div class="overlay">
+                        <div class="wrappedtext">This is a personal flappy-bird-like game project. <br> Programmed in
+                            <span style="color:#dcae1d;">C++</span> using <span style="color:#dcae1d;">MS Visual Studio
+                                2017</span>,
+                            with help of <span style="color:#dcae1d;">OpenGL library</span>.<br>Implemented Game UI
+                            and added Game Pause/Restart function. <br>
+                            Had a general idea of OOP and assured basic game functions, however, the project is
+                            extensible
+                            and more features can be added on top of the current version.
+                        </div>
+                    </div>
+                </div>
+                <a href="https://www.dropbox.com/s/9sa79zrzu6j226y/FlappyRocket.zip?dl=0" class="btn-light">
+                    <i class="fas fa-link"></i>&nbsp;Link to Dropbox
+                </a>
+            </div>
+
             <div class="item">
                 <a href="#" class="btn">
                     <i class="fas fa-star"></i>&nbsp;2048 Angular Web App
