changed project title

--- a/work.html
+++ b/work.html
@@ -63,11 +63,11 @@
 
             <div class="item">
                 <a href="#" class="btn">
-                    <i class="fas fa-star"></i>&nbsp;2048 Angular Web App
+                    <i class="fas fa-star"></i>&nbsp;Flappy Rocket
                 </a>
                 <div class="container">
                     <!--<a href="#!"><img src="img/proj1.jpg" alt="Project" class="image"></a>-->
-                    <img src="img/proj0.PNG" alt="Project" class="image">
+                    <img src="img/proj0.png" alt="Project" class="image">
                     <div class="overlay">
                         <div class="wrappedtext">This is a personal flappy-bird-like game project. <br> Programmed in
                             <span style="color:#dcae1d;">C++</span> using <span style="color:#dcae1d;">MS Visual Studio
