update my portfolio

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="work.html" class="nav-link">
-                        My Work
+                        My Projects
                     </a>
                 </li>
                 <li class="nav-item">
@@ -59,13 +59,14 @@
         <h2 class="words-heading about-words-heading">
             In case I dont see you, good afternoon, good evening, and good night.
         </h2>
+        
         <div class="about-info">
             <img src="img/wordcloud.jpeg" alt="wordcloud" class="bio-image">
-            <div class="bio">
+            <div class="job bio1">
                 <h3 class="text-secondary">BIO</h3>
                 <p class="bio-text">I have two degrees, Business and CS, but I am prepared and determined to be a
                     professional developer. </p>
-                <p class="bio-text">I am a new grad with limited experience, but I am passionate, eager to learn and
+                <p class="bio-text">I do not have a rich experience at the moment, but I am passionate, eager to learn and
                     willing to take any challenges. </p>
                 <p class="bio-text">I have been exposed to many programming languages during my study, but I do not
                     mind learn a new one. </p>
@@ -74,6 +75,20 @@
                 <p class="bio-text">I can prove my ability if I have the chance, and there is no but for this line :)</p>
 
             </div>
+
+            <div class="job bio2">
+                <h3>Software Developer @ Jackpot Digital</h3>
+                <div class="job1-text">
+                    <li><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Worked as a full-stack developer mainly worked with Angular/TypeScript, Java, SQL, C#</li>
+                    <li><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Implenmented features to improve functionalities and UI/UX for the web application of the project</li>
+                    <li><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Wrote stored procedures and SQL queries to support RESTful API</li>
+                    <li><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Worked on the WPF game client with C#/.Net</li>
+                    <li><i class="fa fa-caret-right" aria-hidden="true"></i>&nbsp;&nbsp;Fully exposed to DevOps processes, have a basic idea of how Jenkins works</li>
+
+                    <p>It was a good experience that I got to participate in every step of developing and delivering software. </p>
+                </div>
+            </div>
+
 
             <div class="job job-1">
                 <h3>Software Developer Co-op @ Colligo</h3>
