--- a/contact.html
+++ b/contact.html
@@ -1,99 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/main.css" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script src="js/game.js"></script>
     <title>Contact Me</title>
-</head>
+  </head>
 
-<body class="about-body">
+  <body class="about-body">
     <!--<div class="overlay"></div> -->
 
     <header>
-        <div class="menu-btn">
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+
+      <nav class="menu">
+        <div class="menu-branding">
+          <div class="avatar"></div>
         </div>
 
-        <nav class="menu">
-            <div class="menu-branding">
-                <div class="avatar"></div>
-            </div>
-
-            <ul class="menu-nav">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link">
-                        Home
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="about.html" class="nav-link">
-                        About Me
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="work.html" class="nav-link">
-                        My Work
-                    </a>
-                </li>
-                <li class="nav-item current">
-                    <a href="contact.html" class="nav-link">
-                        How to Reach Me
-                    </a>
-                </li>
-            </ul>
-        </nav>
-
+        <ul class="menu-nav">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">
+              Home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="about.html" class="nav-link">
+              About Me
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="work.html" class="nav-link">
+              My Projects
+            </a>
+          </li>
+          <li class="nav-item current">
+            <a href="contact.html" class="nav-link">
+              Contact Me
+            </a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main id="contact">
-        <h1 class="name-heading about-me">
-            Contact <span class="text-secondary">Me</span>
-        </h1>
-        <h2 class="words-heading">
-            Ways to Contact Me
-        </h2>
-        <div class="column">
-            <!--<iframe src="https://www.silvergames.com/en/bubble-shooter/iframe" width="800" height="600" style="margin:0;padding:0;border:0"></iframe>-->
-            <!--<iframe src="snake.html" height="620" width="620"></iframe>-->
+      <h1 class="name-heading about-me">
+        Contact <span class="text-secondary">Me</span>
+      </h1>
+      <h2 class="words-heading">
+        Ways to Contact Me
+      </h2>
+      <div class="column">
+        <!--<iframe src="https://www.silvergames.com/en/bubble-shooter/iframe" width="800" height="600" style="margin:0;padding:0;border:0"></iframe>-->
+        <!--<iframe src="snake.html" height="620" width="620"></iframe>-->
+      </div>
+
+      <div class="boxes ">
+        <div>
+          <span class="text-secondary">
+            Email:
+          </span>
+          amberqi1123@gmail.com
         </div>
-
-        <div class="boxes ">
-
-            <div>
-                <span class="text-secondary">
-                    Email:
-                </span> amberqi1123@gmail.com
-            </div>
-            <div>
-                <span class="text-secondary">
-                    Phone:
-                </span> (778) 322-0884
-            </div>
-            <div>
-                <span class="text-secondary">
-                    Address:
-                </span> 5100 Capitol Drive Burnaby BC V5B4S7
-            </div>
+        <div>
+          <span class="text-secondary">
+            Phone:
+          </span>
+          (778) 322-0884
         </div>
-
-
+        <div>
+          <span class="text-secondary">
+            Address:
+          </span>
+          5100 Capitol Drive Burnaby BC V5B4S7
+        </div>
+      </div>
     </main>
 
     <footer id="main-footer">
-        <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;amberqi1123@gmail.com
+      <i class="fa fa-envelope" aria-hidden="true"></i
+      >&nbsp;amberqi1123@gmail.com
     </footer>
 
-
     <script src="js/main.js"></script>
-</body>
-
+  </body>
 </html>
