--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
                 </li>
                 <li class="nav-item current">
                     <a href="work.html" class="nav-link">
-                        My Work
+                        My Projects
                     </a>
                 </li>
                 <li class="nav-item">
@@ -54,7 +54,7 @@
 
     <main id="work">
         <h1 class="name-heading work">
-            My <span class="text-secondary">Work</span>
+            My <span class="text-secondary">Projects</span>
         </h1>
         <h2 class="words-heading about-words-heading">
             Some of my completed projects, including personal projects and academic projects.
